# UIdahoBandGlasses

./: .clang-format  .gitignore  README.md  example_config.json  setup.sh
common/: Color.cpp  Color.hpp  Image.cpp  Image.hpp  Matrix.hpp  README.md  common.hpp
old_setup/receiver/uiGC0/: ._uiGC0.ino  goofyscript.sh  uiGC0.ino
old_setup/receiver/uiGC0/PaxHeader/: uiGC0.ino
old_setup/transmitter/: ht13  ht13.c  ht13.cpp  ht13.sh  packs.hpp
receiver/: CMakeLists.txt
receiver/src/: main.cpp  mrf24j.cpp  mrf24j.h  src.ino
receiver/uiGC0/: uiGC0.ino.standard.hex  uiGC0.ino.with_bootloader.standard.hex
transmitter/: CMakeLists.txt
transmitter/src/: BMP.cpp  BMP.hpp  Color.cpp  Color.hpp  FTDI.cpp  FTDI.hpp  FTDIDevice.cpp  FTDIDevice.hpp  Guarded.hpp  Image.cpp  Image.hpp  Instruction.cpp  Instruction.hpp  InstructionThread.cpp  InstructionThread.hpp  Mask.cpp  Mask.hpp  Matrix.hpp  Symbol.hpp  Writer.cpp  Writer.hpp  colors.hpp  common  config.cpp  config.hpp  example.cpp  main.cpp  temp.txt
transmitter/tests/: 01_blink_red.cpp  02_blink_rgb.cpp  03_blink_red2.cpp  04_green_until_newline.cpp  05_alternate_on_newline.cpp
